Fix iOS app layout break

--- a/src/components/molecules/Breadcrumb/index.pcss
+++ b/src/components/molecules/Breadcrumb/index.pcss
@@ -1,7 +1,7 @@
 .header {
   &__content {
     max-height: calc((var(--grid) * 8) + (var(--space-s) * 2) + var(--ion-safe-area-top));
-    padding-top: calc(var(--space-s) + var(--ion-safe-area-top)) !important;
+    padding-top: calc(var(--space-s)) !important;
     padding-bottom: var(--space-s);
 
     --padding-top: calc(var(--space-s) + var(--ion-safe-area-top)) !important;
